--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,8 @@
 <html>
 
+  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
@@ -9,12 +12,13 @@
   <!-- Latest compiled and minified JavaScript -->
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
-  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-
   <script type="text/javascript">
     $(function(){
         $(document).on('click','input[type=text]',function(){ this.select(); });
+    });
+
+    jQuery.getJSON("./jobs.json", function(data) {
+      console.log(data["job_id"]);
     });
   </script>
 
