--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,7 +17,7 @@
         $(document).on('click','input[type=text]',function(){ this.select(); });
     });
 
-    jQuery.getJSON("./jobs.json", function(data) {
+    jQuery.getJSON("https://raw.githubusercontent.com/hints/howtobe/master/frontend/jobs.json?callback=?", function(data) {
       console.log(data["job_id"]);
     });
   </script>
