--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,18 +12,13 @@
   <!-- Latest compiled and minified JavaScript -->
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
+  <script type="text/javascript"
+  src="https://www.google.com/jsapi?autoload={'modules':[{'name':'visualization','version':'1.1','packages':['sankey']}]}">
+</script>
+  
   <script type="text/javascript">
-    function resizeInput() {
-      if ($(this).val().length <= 9) {
-        $(this).attr('size', 7);
-      } else {
-        $(this).attr('size', $(this).val().length - 2);
-      }
-    }
-
     $(function(){
         $(document).on('click','input[type=text]',function(){ this.select(); });
-        $('input[type="text"]').keyup(resizeInput).each(resizeInput);
     });
 
     jQuery.ajax({url: "jobs.json",
@@ -32,9 +27,58 @@
          $('#job').text(job.pretty_name);
          $('#years').text(job.number_years_of_college);
          $('#switched').text(job.number_job_changes);
+		 drawChart(data);
     }).fail(function() {
       console.log('fail');
     });
+	
+	function drawChart(data) {
+		var diagram = new google.visualization.DataTable();
+		diagram.addColumn('string', 'From');
+		diagram.addColumn('string', 'To');
+		diagram.addColumn('number', 'Weight');
+
+		var edges = data.edges;
+		for (var i=0; i<edges.length; i++) {
+			
+			var role_id_to = edges[i][0];
+			var year_to = edges[i][1];
+			var node_to;
+			var table_to = data.time_jobs[year_to];
+			for (var j=0; j<table_to.length; j++) {
+				if (role_id_to == table_to[j].role_id) {
+					node_to = table_to[j].pretty_name;
+					break;
+				}
+			}
+
+			var role_id_from = edges[i][2];
+			var year_from = edges[i][3];
+			var node_from;
+			
+			var table_from = data.time_jobs[year_from];
+			for (var j=0; j<table_from.length; j++) {
+				if (role_id_from == table_from[j].role_id) {
+					node_from = table_from[j].pretty_name;
+					break;
+				}
+			}
+			
+			var weight = edges[i][4];
+			diagram.addRows([
+				[ node_from, node_to, parseFloat(weight) ]
+			]);
+		}
+		
+		// Set chart options
+		var options = {
+		  width: 600,
+		};
+
+		// Instantiate and draw our chart, passing in some options.
+		var chart = new google.visualization.Sankey(document.getElementById('sankey_basic'));
+		chart.draw(diagram, options);
+	}
   </script>
 
   <style>
@@ -64,7 +108,7 @@
 
   .info-graphic {
     padding: 40px 0px;
-    text-align: justify;
+    text-align: left;
     font-size: 26px;
     max-width: 800px;
     margin: auto;
@@ -75,7 +119,7 @@
   <body>
     <div class="core-content">
       <div class="container" style="padding: 120px 15px;">
-        <p class="title-question">How to be an <input type="text" size="7" value="Astronaut"></input>?</p>
+        <p class="title-question">How to be an <input type="text" size="8" value="Astronaut"></input>?</p>
       </div>
     </div>
 
@@ -83,7 +127,10 @@
       <div class="">
         <p><b><i>Did you know?</i></b> The average <span id="job"></span> has spent <span id="years"></span> years in post secondary education and has switched jobs <span id="switched"></span> times.</p>
       </div>
+	  <br />
+	  <div id="sankey_basic" style="width: 900px; height: 300px;"></div>
     </div> 
-
+	
+	
   </body>
 </html>
