--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,15 +14,45 @@
 
   <script type="text/javascript">
     function resizeInput() {
-      if ($(this).val().length <= 9) {
-        $(this).attr('size', 7);
+      if ($(this).val().length <= 6) {
+        $(this).attr('size', 5);
       } else {
-        $(this).attr('size', $(this).val().length - 2);
+        $(this).attr('size', $(this).val().length - 1);
       }
     }
 
+    var fading_job = 0;
+    var jobs = ["Astronaut", "United States Senator",
+      "Investment Banker", "CEO", "Software Engineer", "Ballet Dancer",
+      "your dream career"];
+
+    setInterval(function() {
+      if ($.inArray($('#job-title').val(), jobs) < 0 && 
+          !$("#job-title option:selected").length) {
+        return; 
+      }
+
+/*
+      if (fading_job < 0) {
+        return;
+      }
+*/
+
+      fading_job += 1;
+      var job = jobs[fading_job % jobs.length];
+      $('#job-title').fadeOut(400, function() {
+        $('#job-title').val(job);
+        resizeInput.call($('#job-title'));
+      }).fadeIn();
+ 
+    }, 2000);
+
     $(function(){
-        $(document).on('click','input[type=text]',function(){ this.select(); });
+        $(document).on('click','input[type=text]',function(){
+          this.select();
+          $(this).val('');
+          // fading_job = -1;
+         });
         $('input[type="text"]').keyup(resizeInput).each(resizeInput);
     });
 
@@ -54,7 +84,6 @@
 
   .core-content {
     background-color: #2854a1;
-    text-align: center;
   }
 
   .title-question {
@@ -70,12 +99,20 @@
     margin: auto;
   }
 
+  .inner-question {
+    padding: 120px 15px;
+    max-width: 800px;
+    margin: auto;
+  }
+
   </style>
 
   <body>
     <div class="core-content">
-      <div class="container" style="padding: 120px 15px;">
-        <p class="title-question">How to be an <input type="text" size="7" value="Astronaut"></input>?</p>
+      <div class="container">
+        <div class="inner-question">
+        <p class="title-question">How to be a <input id="job-title" type="text" size="7" value="Astronaut"></input>?</p>
+        </div>
       </div>
     </div>
 
