--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,8 +22,8 @@
     }
 
     var fading_job = 0;
-    var jobs = ["Astronaut", "United States Senator",
-      "Investment Banker", "CEO", "Software Engineer", "Ballet Dancer",
+    var jobs = ["an Astronaut", "a United States Senator",
+      "an Investment Banker", "a CEO", "a Software Engineer", "a Ballet Dancer",
       "your dream career"];
 
     setInterval(function() {
@@ -111,7 +111,7 @@
     <div class="core-content">
       <div class="container">
         <div class="inner-question">
-        <p class="title-question">How to be a <input id="job-title" type="text" size="7" value="Astronaut"></input>?</p>
+        <p class="title-question">How to be <input id="job-title" type="text" size="7" value="an Astronaut"></input>?</p>
         </div>
       </div>
     </div>
