--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,12 +36,6 @@
         return; 
       }
 
-/*
-      if (fading_job < 0) {
-        return;
-      }
-*/
-
       fading_job += 1;
       var job = jobs[fading_job % jobs.length];
       $('#job-title').fadeOut(400, function() {
@@ -60,13 +54,14 @@
         $('input[type="text"]').keyup(resizeInput).each(resizeInput);
     });
 
-    jQuery.ajax({url: "jobs.json",
+    jQuery.ajax({url: "http://54.210.89.125/api/job:22/",
+       //jobs.json",
        dataType: "json"}).done(function(data) {
-         var job = data.time_jobs['0'][0];
+         var job = data.nodes.time_jobs['0'][0];
          $('#job').text(job.pretty_name);
          $('#years').text(job.number_years_of_college);
          $('#switched').text(job.number_job_changes);
-		 drawChart(data);
+         drawChart(data.nodes);
     }).fail(function() {
       console.log('fail');
     });
