--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,22 +17,63 @@
 </script>
   
   <script type="text/javascript">
-    $(function(){
-        $(document).on('click','input[type=text]',function(){ this.select(); });
-    });
+	function resizeInput() {
+      if ($(this).val().length <= 6) {
+        $(this).attr('size', 5);
+      } else {
+        $(this).attr('size', $(this).val().length - 1);
+      }
+    }
 
-	
-    jQuery.ajax({url: "http://54.210.89.125/api/job:22/",
-       dataType: "json"}).done(function(data) {
-		console.log(data);
-         var job = data.nodes.time_jobs['0'][0];
-         $('#job').text(job.pretty_name);
-         $('#years').text(job.number_years_of_college);
-         $('#switched').text(job.number_job_changes);
-		 drawChart(data);
-    }).fail(function() {
-      console.log('fail');
+    var fading_job = 0;
+    var jobs = ["an Astronaut", "a United States Senator",
+      "an Investment Banker", "a CEO", "a Software Engineer", "a Ballet Dancer",
+      "your dream career"];
+
+    setInterval(function() {
+      if ($.inArray($('#job-title').val(), jobs) < 0 && 
+          !$("#job-title option:selected").length) {
+        return; 
+      }
+
+/*
+      if (fading_job < 0) {
+        return;
+      }
+*/
+
+      fading_job += 1;
+      var job = jobs[fading_job % jobs.length];
+      $('#job-title').fadeOut(400, function() {
+        $('#job-title').val(job);
+        resizeInput.call($('#job-title'));
+      }).fadeIn();
+ 
+    }, 2000);
+
+    $(function(){
+        $(document).on('click','input[type=text]',function(){
+          this.select();
+          $(this).val('');
+          // fading_job = -1;
+         });
+        $('input[type="text"]').keyup(resizeInput).each(resizeInput);
     });
+	
+	
+	function getJSONData(input) {
+		jQuery.ajax({url: "http://dreamjobs.me/api/developer/",
+		   dataType: "json"}).done(function(data) {
+			console.log(data);
+			 var job = data.nodes.time_jobs['0'][0];
+			 $('#job').text(job.pretty_name);
+			 $('#years').text(job.number_years_of_college);
+			 $('#switched').text(job.number_job_changes);
+			 drawChart(data);
+		}).fail(function() {
+		  console.log('fail');
+		});
+	}
 
 	function drawChart(data) {
 		var diagram = new google.visualization.DataTable();
@@ -139,16 +180,24 @@
     padding: 40px 0px;
     text-align: left;
     font-size: 26px;
-    max-width: 800px;
+    max-width: 1200px;
     margin: 0 auto;
   }
 
+   .inner-question {
+    padding: 120px 15px;
+    max-width: 800px;
+    margin: auto;
+  }
+  
   </style>
 
   <body>
     <div class="core-content">
-      <div class="container" style="padding: 120px 15px;">
-        <p class="title-question">How to be an <input type="text" size="8" value="Astronaut"></input>?</p>
+      <div class="container">
+        <div class="inner-question">
+        <p class="title-question">Dream Job: <input id="job-title" type="text" size="7" onkeyup="inputKeyUp(event)" value="an Astronaut"></input>?</p>
+        </div>
       </div>
     </div>
 
@@ -157,9 +206,8 @@
         <p><b><i>Did you know?</i></b> The average <span id="job"></span> has spent <span id="years"></span> years in post secondary education and has switched jobs <span id="switched"></span> times.</p>
       </div>
 	  <br />
-	  <div id="sankey_basic" style="width: 900px; height: 300px;"></div>
+	  <div id="sankey_basic" style="width: 50%; height: 300px;"></div>
     </div> 
-	
 	
   </body>
 </html>
